Fix for the layout of html-formatted podcast descriptions
The generic rule of using "display: inline-block" for everything inside the
sidebar messed up the layout of html-formatted podcast descriptions in some
cases. The rule is now reverted for all detail values for podcasts, allowing
the default "display" value for each element type to be used.

--- a/css/style-sidebar.css
+++ b/css/style-sidebar.css
@@ -290,3 +290,7 @@
 #app-sidebar #podcast-details .tags {
 	margin-top: 24px;
 }
+
+#app-sidebar #podcast-details dd * {
+	display: unset;
+}
